--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Copyright 2015 - The CyanogenMod Project
 
-Device configuration for LG G Stylo (T-Mobile).
+Device configuration for LG G Stylo (MetroPCS).
 
 WORK IN PROGRESS. WILL EAT YOUR CAT.
